--- a/index.html
+++ b/index.html
@@ -10,287 +10,105 @@
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
-    <!-- font style -->
-    <link rel="stylesheet" href="https://use.typekit.net/vbi1wlg.css" />
-
-    <!-- icons -->
-    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
-
-    <link rel="stylesheet" href="main.css" />
-  </head>
-  <body>
-    <!-- cards sections -->
-
-    <section class="society">
-      <div class="society-header">
-        <a href="#" class="what-we-do">WHAT WE DO</a>
-        <h1>WE RUN WITH THE MOTTO OF GIVING BACK TO THE SOCIETY.</h1>
-      </div>
-      <div class="card">
-        <div class="card1">
-          <img src="images/card-3.png" alt="" />
-          <h3>VISION</h3>
-          <div class="read">
+    <!-- Events and Latest section  -->
+    <div class="events-and-news">
+      <h1>Let's Take action now to save the future.</h1>
+      <!-- Events section -->
+      <div class="events">
+        <img src="images/github.png" alt="" />
+        <div class="events-desktop">
+          <span class="heading">Event</span>
+          <section class="en-description">
+            <h2>One Day Workshop On Git/Github</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem
-              corporis, tempora voluptatibus soluta nobis dicta numquam tempore
-              possimus est odio!
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
+              nemo enim aspernatur repudiandae, vero magnam quam quos vel,
+              eveniet similique at debitis sit mollitia voluptatem, quo ut
+              molestias voluptate exercitationem.
             </p>
-            <a href="#">Read more</a>
-          </div>
+            <button class="read-more">Read more</button>
+          </section>
         </div>
-        <div class="card1">
-          <img src="images/card-2.png" alt="" />
-          <h3>MISSION</h3>
-          <div class="read">
+      </div>
+      <!-- End of Events section  -->
+
+      <!-- News section -->
+      <div class="news">
+        <img src="images/summit.png" alt="" />
+        <div class="news-desktop">
+          <span class="heading">LATEST NEWS</span>
+          <section class="en-description">
+            <h2>Annual MFIRD Summit on Dec. 6th 2020</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem
-              corporis, tempora voluptatibus soluta nobis dicta numquam tempore
-              possimus est odio!
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              Mollitia, nam error ea sit omnis possimus a asperiores ratione,
+              earum tempora maxime dolorum suscipit adipisci consequatur amet
+              autem, nostrum aliquam et!
             </p>
-            <a href="#">Read more</a>
-          </div>
-        </div>
-        <div class="card1">
-          <img src="images/card-1.png" alt="" />
-          <h3>VOLUNTEERING</h3>
-          <div class="read">
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem
-              corporis, tempora voluptatibus soluta nobis dicta numquam tempore
-              possimus est odio!
-            </p>
-            <a href="#">Read more</a>
-          </div>
+            <button class="read-more">Read more</button>
+          </section>
         </div>
       </div>
-    </section>
-    <section class="secure-future">
-      <div class="construct">
-        <h1>CONSTRUCT TODAY TO SECURE FUTURE</h1>
-        <a href="#">Take action</a>
-      </div>
-      <div class="did-you-know">
-        <div class="did-you">
-          <div class="did">
-            <div class="did-h">
-              <h5>DID YOU KNOW ?</h5>
-            </div>
-            <h1>7 out of 10</h1>
-            <p>People are unemployed and it is getting worse</p>
-          </div>
-          <div class="did-you-icons">
-            <a href=""><i class="fab fa-facebook" aria-hidden="true"></i></a>
-            <a href=""><i class="fab fa-twitter" aria-hidden="true"></i></a>
-          </div>
-        </div>
-        <div class="did-you">
-          <div class="did">
-            <h1>3 out of 4</h1>
-            <p>People are under heavy debts</p>
-          </div>
-          <div class="did-you-icons">
-            <a href=""><i class="fab fa-facebook" aria-hidden="true"></i></a>
-            <a href=""><i class="fab fa-twitter" aria-hidden="true"></i></a>
-          </div>
-        </div>
-        <div class="did-you">
-          <div class="did">
-            <h1>30%</h1>
-            <p>People loose their job because won't upgrade themselves</p>
-          </div>
-          <div class="did-you-icons">
-            <a href=""><i class="fab fa-facebook" aria-hidden="true"></i></a>
-            <a href=""><i class="fab fa-twitter" aria-hidden="true"></i></a>
-          </div>
-        </div>
-        <div class="did-you">
-          <div class="did">
-            <h1>New Trends</h1>
-            <p>Following and acquire new trends to survive in the market</p>
-          </div>
-          <div class="did-you-icons">
-            <a href=""><i class="fab fa-facebook" aria-hidden="true"></i></a>
-            <a href=""><i class="fab fa-twitter" aria-hidden="true"></i></a>
-          </div>
-        </div>
-      </div>
-    </section>
+      <!-- End of News Section -->
+    </div>
+    <!-- End of Events and Latest section -->
 
-    <!-- carousal -->
-    <section class="carousal">
-      <!-- The dots/circles -->
-      <div class="dots">
-        <span class="dot" onclick="currentSlide(1)"></span>
-        <span class="dot" onclick="currentSlide(2)"></span>
-        <span class="dot" onclick="currentSlide(3)"></span>
+    <!-- Subscription section -->
+    <div class="subscription">
+      <h2>
+        Subscribe to our monthly newsletter and stay up to date with all news
+        and events.
+      </h2>
+      <form action="">
+        <input
+          type="email"
+          name=""
+          id=""
+          placeholder="Enter your email adress"
+        />
+        <button class="read-more">Subscribe</button>
+      </form>
+    </div>
+    <!-- End of Subscription section -->
+
+    <footer>
+      <!-- Logo  -->
+      <section class="millat-heading">
+        <img src="images/mfird-logo.png" alt="" />
+        <h3>Millat Foundation for Industry,Research & Development</h3>
+      </section>
+      <!-- End Logo -->
+
+      <!-- contact links and Social reach out -->
+      <div class="contact interaction">
+        <span>Contact Us</span>
+        <hr />
+        <p>
+          #123 Anywhere St.Cityname,NY 11206 (123) 4567-7890 contact@mfird.org
+        </p>
       </div>
-      <div class="slideshow-container">
-        <!-- Full-width images with number and caption text -->
-        <div class="mySlides fade">
-          <!-- <div class="numbertext">1 / 3</div> -->
-          <div class="flex-box">
-            <div class="stories">
-              <p>STORIES</p>
-              <h2>
-                "I am a person who was helped by this organization. Before they
-                gave me assistance, I was really struggling with this issue, but
-                now my life is better."
-              </h2>
-              <small>Abdullah Qureshi, Student</small>
-              <a href="#">Read More</a>
-            </div>
-            <div class="stories-img">
-              <img src="images/stories-img1.jpeg" style="width: 100%;" />
-            </div>
-          </div>
-        </div>
-
-        <div class="mySlides fade">
-          <div class="flex-box">
-            <div class="stories">
-              <p>STORIES</p>
-              <h2>
-                "I am a person who was helped by this organization. Before they
-                gave me assistance, I was really struggling with this issue, but
-                now my life is better."
-              </h2>
-              <small>Rasiq Bhatt, Student</small>
-              <a href="#">Read More</a>
-            </div>
-            <div class="stories-img">
-              <img src="images/stories-img2.jpeg" style="width: 100%;" />
-            </div>
-          </div>
-        </div>
-
-        <div class="mySlides fade">
-          <div class="flex-box">
-            <div class="stories">
-              <p>STORIES</p>
-              <h2>
-                "I am a person who was helped by this organization. Before they
-                gave me assistance, I was really struggling with this issue, but
-                now my life is better."
-              </h2>
-              <small>Yahiya Khan, Student</small>
-              <a href="#">Read More</a>
-            </div>
-            <div class="stories-img">
-              <img src="images/stories-img3.jpeg" style="width: 100%;" />
-            </div>
-          </div>
-        </div>
-
-        <!-- Next and previous buttons -->
-        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+      <div class="links interaction">
+        <span>Links</span>
+        <hr />
+        <ul class="list">
+          <li>The issue</li>
+          <li>How we help</li>
+          <li>Get involved</li>
+          <li>Latest news</li>
+        </ul>
       </div>
-      <br />
-    </section>
-
-    <script src="main.js"></script>
-    <!-- End of carousal section -->
-
-       <!-- Events and Latest section  -->
-       <div class="events-and-news">
-        <h1>Let's Take action now to save the future</h1>
-        <!-- Events section -->
-        <div class="events">
-          <img src="images/github.png" alt="" />
-          <div class="events-desktop">
-            <span class="heading">Event</span>
-            <section class="en-description">
-              <h2>One Day Workshop On Git/Github</h2>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
-                nemo enim aspernatur repudiandae, vero magnam quam quos vel,
-                eveniet similique at debitis sit mollitia voluptatem, quo ut
-                molestias voluptate exercitationem.
-              </p>
-              <button class="read-more">Read more</button>
-            </section>
-          </div>
-        </div>
-        <!-- End of Events section  -->
-  
-        <!-- News section -->
-        <div class="news">
-          <img src="images/summit.png" alt="" />
-          <div class="news-desktop">
-            <span class="heading">LATEST NEWS</span>
-            <section class="en-description">
-              <h2>Annual MFIRD Summit on Dec. 6th 2020</h2>
-              <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                Mollitia, nam error ea sit omnis possimus a asperiores ratione,
-                earum tempora maxime dolorum suscipit adipisci consequatur amet
-                autem, nostrum aliquam et!
-              </p>
-              <button class="read-more">Read more</button>
-            </section>
-          </div>
-        </div>
-        <!-- End of News Section -->
+      <div class="follow-us interaction">
+        <span>Follow Us</span>
+        <hr />
+        <ul class="list">
+          <li>Facebook</li>
+          <li>Twitter</li>
+          <li>Instagram</li>
+          <li>Medium</li>
+        </ul>
       </div>
-      <!-- End of Events and Latest section -->
-  
-      <!-- Subscription section -->
-      <div class="subscription">
-        <h2>
-          Subscribe to our monthly newsletter and stay up to date with all news
-          and events.
-        </h2>
-        <form action="">
-          <input
-            type="email"
-            name=""
-            id=""
-            placeholder="Enter your email adress"
-          />
-          <button class="read-more">Read more</button>
-        </form>
-      </div>
-      <!-- End of Subscription section -->
-  
-      <footer>
-        <!-- Logo  -->
-        <section class="millat-heading">
-          <img src="images/mfird-logo.png" alt="" />
-          <h3>Millat Foundation for Industry,Research & Development</h3>
-        </section>
-        <!-- End Logo -->
-  
-        <!-- contact links and Social reach out -->
-        <div class="contact interaction">
-          <span>Contact Us</span>
-          <hr />
-          <p>
-            #123 Anywhere St.Cityname,NY 11206 (123) 4567-7890 contact@mfird.org
-          </p>
-        </div>
-        <div class="links interaction">
-          <span>Links</span>
-          <hr />
-          <ul class="list">
-            <li>The issue</li>
-            <li>How we help</li>
-            <li>Get involved</li>
-            <li>Latest news</li>
-          </ul>
-        </div>
-        <div class="follow-us interaction">
-          <span>Follow Us</span>
-          <hr />
-          <ul class="list">
-            <li>Facebook</li>
-            <li>Twitter</li>
-            <li>Instagram</li>
-            <li>Medium</li>
-          </ul>
-        </div>
-        <!-- End  -->
-        <h2>#BE THE CHANGE</h2>
-      </footer>
+      <!-- End  -->
+      <h2>#BE THE CHANGE</h2>
+    </footer>
   </body>
 </html>
