--- a/index.html
+++ b/index.html
@@ -3,13 +3,255 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>MFIRD</title>
-    <link rel="stylesheet" href="https://use.typekit.net/vbi1wlg.css" />
     <link rel="stylesheet" href="https://use.typekit.net/lbl8uoo.css" />
+    <link rel="stylesheet" href="https://use.typekit.net/vbi1wlg.css" />
+    <!-- icons -->
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <link rel="stylesheet" href="main.css" />
+    <title>MFIRD</title>
   </head>
+
   <body>
+    <div class="header-with-menu">
+      <div class="header-wrapper">
+        <div class="logo-and-name-wrapper">
+          <div class="head-logo"><img src="images/logo.png" alt="logo" /></div>
+          <div class="name">
+            <h4>Millat Foundation For Industry,Research & Development</h4>
+          </div>
+        </div>
+        <button class="menu-button" onclick="displayMenu();">
+          <div id="l1" class="lines"></div>
+          <div id="l2" class="lines"></div>
+          <div id="l3" class="lines"></div>
+        </button>
+      </div>
+      <div class="menu">
+        <a href="" class="menu-items">About Us</a>
+        <a href="" class="menu-items">Our Stories</a>
+        <a href="" class="menu-items">News & Events</a>
+        <a href="" class="menu-items">Sign in / Sign Up</a>
+      </div>
+    </div>
+    <div class="quotation-with-name-and-take-action-head">
+      <div class="quotation-with-name-wrapper max-width-container">
+        <div class="bulletin-wrapper">
+          <div class="decoration"></div>
+          <div class="name-of-institution">
+            <h2>Millat Foundation for Industry, Research & Development</h2>
+          </div>
+        </div>
+        <div class="quotation">
+          <p class="quote">
+            #be the change you want to see in the world
+          </p>
+          <h4>mahatma gandhi</h4>
+        </div>
+      </div>
+      <div class="take-action-head">
+        <h4>take action</h4>
+      </div>
+    </div>
+    <div class="max-width">
+      <div class="take-action-section max-width-container">
+        <div class="take-action-items">
+          <h3>learn</h3>
+          <p>
+            improve your skills with our ups killing programmes
+          </p>
+        </div>
+        <div class="take-action-items">
+          <h3>volunteer</h3>
+          <p>
+            share your experience and knowledge for the benifit of the society
+          </p>
+        </div>
+        <div class="take-action-items">
+          <h3>guidance</h3>
+          <p>
+            mould your career under the guidance of industry experts
+          </p>
+        </div>
+        <div class="take-action-items">
+          <h3>internships</h3>
+          <p>
+            grab an opportunity to undergo internships at selected domains
+          </p>
+        </div>
+      </div>
+    </div>
+    <!-- cards sections -->
+    <section id="move-to-society" class="society">
+      <div class="society-header">
+        <a href="#" class="what-we-do">WHAT WE DO</a>
+        <h1>WE RUN WITH THE MOTTO OF GIVING BACK TO THE SOCIETY.</h1>
+      </div>
+      <div class="card">
+        <div class="card1">
+          <img src="images/card-3-min.png" alt="" />
+          <h3>VISION</h3>
+          <div class="read">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem
+              corporis, tempora voluptatibus soluta nobis dicta numquam tempore
+              possimus est odio!
+            </p>
+            <a href="#">Read more</a>
+          </div>
+        </div>
+        <div class="card1">
+          <img src="images/card-2-min.png" alt="" />
+          <h3>MISSION</h3>
+          <div class="read">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem
+              corporis, tempora voluptatibus soluta nobis dicta numquam tempore
+              possimus est odio!
+            </p>
+            <a href="#">Read more</a>
+          </div>
+        </div>
+        <div class="card1">
+          <img src="images/card-1-min.png" alt="" />
+          <h3>VOLUNTEERING</h3>
+          <div class="read">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem
+              corporis, tempora voluptatibus soluta nobis dicta numquam tempore
+              possimus est odio!
+            </p>
+            <a href="#">Read more</a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- card-section end -->
+    <!-- stories section start -->
+    <section class="secure-future">
+      <div class="secure-future-container">
+        <div class="construct">
+          <h1>CONSTRUCT TODAY TO SECURE FUTURE</h1>
+          <a href="#">Take action</a>
+        </div>
+        <div class="did-you-know">
+          <div id="move-to-did-you" class="did-you">
+            <div class="did">
+              <div class="did-h">
+                <h5>DID YOU KNOW ?</h5>
+              </div>
+              <div class="did-hp">
+                <h1>7 out of 10</h1>
+                <p>People are unemployed and it is getting worse</p>
+              </div>
+            </div>
+            <div class="did-you-icons">
+              <a href=""><i class="fab fa-facebook" aria-hidden="true"></i></a>
+              <a href=""><i class="fab fa-twitter" aria-hidden="true"></i></a>
+            </div>
+          </div>
+          <div class="did-you">
+            <div class="did">
+              <h1>3 out of 4</h1>
+              <p>People are under heavy debts</p>
+            </div>
+            <div class="did-you-icons">
+              <a href=""><i class="fab fa-facebook" aria-hidden="true"></i></a>
+              <a href=""><i class="fab fa-twitter" aria-hidden="true"></i></a>
+            </div>
+          </div>
+          <div class="did-you">
+            <div class="did">
+              <h1>30%</h1>
+              <p>People loose their job because won't upgrade themselves</p>
+            </div>
+            <div class="did-you-icons">
+              <a href=""><i class="fab fa-facebook" aria-hidden="true"></i></a>
+              <a href=""><i class="fab fa-twitter" aria-hidden="true"></i></a>
+            </div>
+          </div>
+          <div class="did-you">
+            <div class="did">
+              <h1>New Trends</h1>
+              <p>Following and acquire new trends to survive in the market</p>
+            </div>
+            <div class="did-you-icons">
+              <a href=""><i class="fab fa-facebook" aria-hidden="true"></i></a>
+              <a href=""><i class="fab fa-twitter" aria-hidden="true"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- stories section end -->
+    <!-- carousal -->
+    <section class="carousal">
+      <!-- The dots/circles -->
+      <div class="dots">
+        <span class="dot" onclick="currentSlide(1)"></span>
+        <span class="dot" onclick="currentSlide(2)"></span>
+        <span class="dot" onclick="currentSlide(3)"></span>
+      </div>
+      <div class="slideshow-container">
+        <div class="mySlides fade">
+          <div class="flex-box">
+            <div class="stories">
+              <p>STORIES</p>
+              <h2>
+                "I am a person who was helped by this organization. Before they
+                gave me assistance, I was really struggling with this issue, but
+                now my life is better."
+              </h2>
+              <small>Abdullah Qureshi, Student</small>
+              <a href="#">Read More</a>
+            </div>
+            <div class="stories-img">
+              <img src="images/stories-img1.jpeg" style="width: 100%;" />
+            </div>
+          </div>
+        </div>
+        <div class="mySlides fade">
+          <div class="flex-box">
+            <div class="stories">
+              <p>STORIES</p>
+              <h2>
+                "I am a person who was helped by this organization. Before they
+                gave me assistance, I was really struggling with this issue, but
+                now my life is better."
+              </h2>
+              <small>Rasiq Bhatt, Student</small>
+              <a href="#">Read More</a>
+            </div>
+            <div class="stories-img">
+              <img src="images/stories-img2.jpeg" style="width: 100%;" />
+            </div>
+          </div>
+        </div>
+
+        <div class="mySlides fade">
+          <div class="flex-box">
+            <div class="stories">
+              <p>STORIES</p>
+              <h2>
+                "I am a person who was helped by this organization. Before they
+                gave me assistance, I was really struggling with this issue, but
+                now my life is better."
+              </h2>
+              <small>Yahiya Khan, Student</small>
+              <a href="#">Read More</a>
+            </div>
+            <div class="stories-img">
+              <img src="images/stories-img3.jpeg" style="width: 100%;" />
+            </div>
+          </div>
+        </div>
+
+        <!-- Next and previous buttons -->
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+      </div>
+      <br />
+    </section>
     <!-- Events and Latest section  -->
     <div class="events-and-news">
       <h1>Let's Take action now to save the future.</h1>
@@ -26,7 +268,11 @@
               eveniet similique at debitis sit mollitia voluptatem, quo ut
               molestias voluptate exercitationem.
             </p>
-            <button class="read-more">Read more</button>
+            <button class="read-more">
+              <a href="" class="read-more-font">
+                Read more
+              </a>
+            </button>
           </section>
         </div>
       </div>
@@ -45,7 +291,11 @@
               earum tempora maxime dolorum suscipit adipisci consequatur amet
               autem, nostrum aliquam et!
             </p>
-            <button class="read-more">Read more</button>
+            <button class="read-more">
+              <a href="" class="read-more-font">
+                Read more
+              </a>
+            </button>
           </section>
         </div>
       </div>
@@ -66,7 +316,7 @@
           id=""
           placeholder="Enter your email adress"
         />
-        <button class="read-more">Subscribe</button>
+        <button class="read-more read-more-font">Subscribe</button>
       </form>
     </div>
     <!-- End of Subscription section -->
@@ -110,5 +360,6 @@
       <!-- End  -->
       <h2>#BE THE CHANGE</h2>
     </footer>
+    <script src="main.js"></script>
   </body>
 </html>
